--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Starter Kit</title>
+  <title>Overlook</title>
 </head>
 <body>
-  <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
-  
-  <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+  <header>
+    <h1 id="home">Overlook</h1>
+    <h2 id="dynamicMsg">Salutations, <span>Andrew</span>!</h2>
+    <button class="hidden">Back</button>
+  </header>
+  <main>
+    <section id='loginPortal' aria-label="Login Page">
+      <h3>Login</h3>
+      <form aria-label="Login Form" action="">
+        <input id='username' type="text" name="login" value="" placeholder="Username">
+        <input id='password' type="password" name="password" placeholder="password">
+        <input id="btnLogin" type="submit" value="Login">
+      </form>
+    </section>
+    <section id='portal' aria-label="Portal" class='hidden'>
+      <h4 id="menuHeader">What would you like to do Today?</h4>
+      <ul id="guestMenu" aria-label="List of pages guest can view">
+        <li><button id='btnViewTodayRooms' aria-label="view available rooms">View</button> available
+          rooms for today</li>
+        <li><button id='btnViewDateRooms' aria-label="view available rooms on date">View</button>
+          available rooms for a different date</li>
+        <li><button id='btnViewMyBookings' aria-label="view my bookings">View</button> my bookings
+        </li>
+      </ul>
+      <article id="viewCalendar" aria-label="Date Selector" class='hidden'>
+        <form action="/action_page.php">
+          <label for="available"> Please choose date</label>
+          <input type="date" name="available" id="dateSelector" min="2021-06-15">
+          <input id="btnChooseDate" type="submit">
+        </form>
+      </article>
+    </section>
+    <section id='bookingMsg' aria-label="booking approved" class='hidden'>
+      <h5>Approved!</h5>
+</section>
+    <section id="availableRoomsView" aria-label="Rooms available" class="room-view hidden">
+    </section>
+  </main>
+  <footer>
+    <p>©Copyright 2021 Overlook Hotel. All Rights Reserved.</p>
+    <p label="Hotel Address">1428 Elm Street Springwood, Ohio</p>
+  </footer>
   <script src="bundle.js"></script>
-
 </body>
 </html>
